# libshout

./: CMakeLists.txt
include/shout/: shout.h
mac/lib/: libshout.3.dylib
mac/lib/pkgconfig/: shout.pc
windows/lib/: libogg.la  libshout.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la
windows/lib/pkgconfig/: ogg.pc  shout.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc
